# luma_shield

./: .gitignore  README.md  docker-compose.yml
agent/: CMakeLists.txt  Dockerfile
agent/config/: agent.conf
agent/include/: agent.h  bpf_loader.h  config.h  stats_collector.h
agent/include/grpc/: client.h
agent/src/: agent.cpp  bpf_loader.cpp  config.cpp  main.cpp  stats_collector.cpp
agent/src/bpf/: firewall.bpf.c  stats.bpf.c
agent/src/grpc/: client.cpp
control-plane/: Dockerfile  go.mod
control-plane/cmd/server/: main.go
control-plane/internal/api/: handlers.go  router.go
control-plane/internal/grpc/: server.go
control-plane/internal/metrics/: prometheus.go
control-plane/internal/models/: models.go
control-plane/internal/redis/: client.go
control-plane/proto/: lumashield.proto
helm/lumashield/: Chart.yaml  values.yaml
helm/lumashield/templates/: _helpers.tpl  agent-daemonset.yaml  control-plane-deployment.yaml  serviceaccount.yaml
k8s/: agent-daemonset.yaml  configmap.yaml  control-plane-deployment.yaml  ingress.yaml  namespace.yaml  redis.yaml
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml  redis.conf
monitoring/grafana/dashboards/: overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: install-agent.sh  test-api.sh
